tests/error/array/same_type.mml
[| 3; 4; 5; true |]
